class diary blue print

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,5 @@
-<div class="container">
-<h1>My Personal Journal</h1>
-</div>
-
+<div class="container head">
+    <h1>My Personal Journal</h1>
+    <hr>
+    </div>
+<app-diary-form></app-diary-form>
