--- a/src/app/diary-form/diary-form.component.html
+++ b/src/app/diary-form/diary-form.component.html
@@ -1,1 +1,25 @@
-
+<div class="row">
+<div class="container">
+    <h2 class="text-center">My Growth</h2>
+    <hr>
+    <form>
+        <div class="form-group">
+  
+            <label for="name">Name</label>
+            <input type="text" required class="form-control" id="name">
+  
+        </div>
+        <div class="form-group">
+  
+            <label for="description">Description</label>
+            <textarea class="form-control" id="description" rows="4" required></textarea>
+  
+        </div>
+        <div class="form-group">
+            <label for="complete">Time</label>
+            <input type='date' id="complete" required>
+  
+        </div>
+    </form>
+  </div>
+</div>
