using bootstrap class to style form

--- a/src/app/diary-form/diary-form.component.html
+++ b/src/app/diary-form/diary-form.component.html
@@ -1,25 +1,26 @@
 <div class="row">
 <div class="container">
-    <h2 class="text-center">My Growth</h2>
+    <h2 class="text-center" style="color: aliceblue;">My Growth</h2>
     <hr>
     <form>
         <div class="form-group">
   
-            <label for="name">Name</label>
+            <label for="name" style="color: aliceblue;">Name</label>
             <input type="text" required class="form-control" id="name">
   
         </div>
         <div class="form-group">
   
-            <label for="description">Description</label>
+            <label for="description" style="color: aliceblue;">Description</label>
             <textarea class="form-control" id="description" rows="4" required></textarea>
   
         </div>
         <div class="form-group">
-            <label for="complete">Time</label>
+            <label for="complete" style="color: aliceblue;">Period</label><br>
             <input type='date' id="complete" required>
   
-        </div>
+        </div><br>
+        <button type="submit" class="btn btn-success">Add Goal</button>
     </form>
   </div>
 </div>
