--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,19 @@
-<div class="container head">
-    <h1>My Personal Journal</h1>
-    <hr>
+<div class="container-fluid bodyy">
+    <div class="head">
+        <h1>My Personal Journal</h1>
+        <hr>
+        </div>
+        
+        <div class="row ">
+
+            <div class="col-md-6" style="background-color:black;">
+
+                <app-diary-form></app-diary-form>
+            </div>
+            <div  class="col-md-6" style="text-align: center; background-color: #92A9BD;">
+                <h2>My Progress</h2>
+                <hr>
+            </div>
+
     </div>
-<app-diary-form></app-diary-form>
+</div>
