styling buttons using bootstrap

--- a/src/app/diary-content/diary-content.component.html
+++ b/src/app/diary-content/diary-content.component.html
@@ -1,2 +1,2 @@
 <p>{{diary.description}}</p>
-<button (click)= 'diaryDelete(true)'>Delete</button>
+<button (click)= 'diaryDelete(true)'class="btn btn-outline-danger">Delete</button>
