--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,7 +19,7 @@
                 <ul>
                     <li *ngFor='let diary of diarys let i = index'>
                         {{diary.id}}   {{diary.name}} due on {{diary.completeDate|date|uppercase}}<br>
-                        <button (click)='Hide(i)'>Toggle</button>
+                        <button (click)='Hide(i)' class="btn btn-primary">Toggle</button>
                         <app-diary-content *ngIf='diary.showDescription' [diary]='diary' (isComplete) = 'completeGoal($event,i)' ></app-diary-content>
                     </li>
                 </ul>
