--- a/src/app/diary-form/diary-form.component.html
+++ b/src/app/diary-form/diary-form.component.html
@@ -6,8 +6,11 @@
         <div class="form-group">
   
             <label for="name" style="color: aliceblue;">Name</label>
-            <input type="text" required class="form-control" id="name">
-  
+            <input type="text" required class="form-control" id="name"  [(ngModel)]="newDiary.name" name="name" #name='ngModel' required>
+            Display {{newDiary.name}}
+            <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
+                <p>Name is required</p>
+              </div>
         </div>
         <div class="form-group">
   
